.kubernetes/monitoring/kibana/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: monitoring
  name: kibana
  labels:
    component: monitoring
    app: kibana
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5601
      targetPort: 5601
  selector:
    component: monitoring
    app: kibana
