.kubernetes/monitoring/kibana/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: monitoring
  name: kibana
  labels:
    component: monitoring
    app: kibana
spec:
  rules:
    - host: kibana.valentinbureaupro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kibana
                port:
                  number: 5601
